# labyrinth

./: Cargo.toml  README.md
GameDataNew/animations/: Player.json
GameDataNew/meshes/: PlayerModel_PlayerModel0.json
GameDataNew/models/: PlayerModel.json
GameDataNew/skeletons/: Player.json
GameDataRaw/animations/: BoxChar.json  Player.json  dragon.json  player.json
GameDataRaw/effects/: player.json
GameDataRaw/materials/: player.json
GameDataRaw/meshes/: BoxCharMesh_BoxCharMesh0.json  player.json
GameDataRaw/models/: BoxCharMesh.json  dragon.json  player.json
GameDataRaw/objects/: BoxChar.json  dragon.json  player.json
GameDataRaw/programs/: debug.json  default.json  shadow.json
GameDataRaw/shaders/: debug_vertex.glsl  default_fragment.glsl  default_vertex.glsl
GameDataRaw/skeletons/: BoxChar.json  Player.json  dragon.json  player.json
assets/: BlockGround.mtl  assets.json  block.blend  block.blend1  block.mtl  debug_fragment.glsl  floor.mtl  fragment.glsl  portal.blend  portal.blend1  portal.mtl  shadow_vertex.glsl  sphere.mtl  torch.blend  torch.mtl  vertex.glsl
assets/BoxChar/: BoxChar.blend  BoxChar.blend1  BoxChar.dae  BoxChar.gltf
assets/TestAnimation/: testanimation.dae  testanimation2.dae
assets/glTF_test/: test.gltf
labyrinth-assets/: Cargo.toml
labyrinth-assets/src/assets/: animation.rs  material.rs  mod.rs  model.rs  object.rs  shaders.rs
labyrinth-cgmath/: Cargo.toml
labyrinth-cgmath/benches/: construction.rs  mat.rs  quat.rs  vec.rs
labyrinth-cgmath/src/: lib.rs  matrix.rs  point.rs  vector.rs
labyrinth-cgmath/tests/: matrix.rs
labyrinth-collada/: Cargo.toml
labyrinth-collada/src/: document.rs  lib.rs  obj.rs  utils.rs
labyrinth-engine/: Cargo.toml  LICENSE
labyrinth-engine/src/: lib.rs
labyrinth-engine/src/attributes/: mod.rs
labyrinth-engine/src/error/: mod.rs
labyrinth-engine/src/game/: camera.rs  context.rs  counter.rs  entity.rs  instance.rs  math.rs  mod.rs  object.rs  rendering.rs
labyrinth-engine/src/resources/: animation.rs  loader.rs  material.rs  mod.rs  model.rs  object.rs  shader.rs  texture.rs
labyrinth-engine/src/runner/: event.rs  mod.rs
labyrinth-engine/src/window/: mod.rs  settings.rs
labyrinth-glyph/: Cargo.toml
labyrinth-glyph/examples/: hello.rs
labyrinth-glyph/src/: builder.rs  lib.rs
labyrinth-obj/: Cargo.toml
labyrinth-obj/src/: mtl.rs  obj.rs
src/: convert.rs  game.rs  main.rs  pack.rs
src/utils/: collada.rs  mod.rs  model.rs  shader.rs
