[package]
name = "labyrinth"
version = "0.1.0"
authors = ["Pepijn Dragt <pepijn.dragt@gmail.com>"]
edition = "2018"
default-run = "labyrinth-game"

[dependencies]
labyrinth-obj = { path = "./labyrinth-obj" }
labyrinth-cgmath = { path = "./labyrinth-cgmath"} 
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
bincode = "1.1.4"
itertools = "0.8.0"


[dependencies.labyrinth-engine]
path = "./labyrinth-engine"

[workspace]
members = [
  ".",
  "labyrinth-engine",
  "labyrinth-glyph",
  "labyrinth-obj",
  "labyrinth-cgmath"
]

[[bin]]
name = "labyrinth-game"
path = "src/game.rs"

[[bin]]
name = "labyrinth-convert"
path = "src/convert.rs"

[profile.dev]
opt-level = 1

[profile.release]
debug = false
#lto = true
#codegen-units = 1
