[package]
name = "labyrinth"
version = "0.1.0"
authors = ["Pepijn Dragt <pepijn.dragt@gmail.com>"]
edition = "2018"

[dependencies]
labyrinth-engine = { path = "./labyrinth-engine" } 
labyrinth-cgmath = { path = "./labyrinth-cgmath" } 
labyrinth-assets = { path = "./labyrinth-assets" } 
labyrinth-collada = { path = "./labyrinth-collada" } 
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
bincode = "1.1.4"
itertools = "0.8.0"
clap = "2.33.0"

[workspace]
members = [
  ".",
  "labyrinth-engine",
  "labyrinth-glyph",
  "labyrinth-cgmath",
  "labyrinth-assets",
  "labyrinth-collada",
]

[profile.release]
debug = false
lto = true
codegen-units = 1