[package]
name = "labyrinth"
version = "0.1.0"
authors = ["Pepijn Dragt <pepijn.dragt@gmail.com>"]
edition = "2018"

[dependencies]
labyrinth-engine = { path = "./labyrinth-engine" } 
labyrinth-cgmath = { path = "./labyrinth-cgmath" } 
labyrinth-assets = { path = "./labyrinth-assets" } 
labyrinth-collada = { path = "./labyrinth-collada" } 
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.45"
bincode = "1.2.1"
itertools = "0.8.2"
clap = "2.33.0"
log = "0.4.8"
env_logger = "0.7.1"

[workspace]
members = [
  ".",
  "labyrinth-engine",
  "labyrinth-glyph",
  "labyrinth-cgmath",
  "labyrinth-assets",
  "labyrinth-collada",
]

[profile.dev]
opt-level = 1
debug = true
lto = false
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
