[package]
name = "labyrinth-cgmath"
version = "0.17.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
license = "Apache-2.0"
description = "A linear algebra and mathematics library for computer graphics."

documentation = "https://docs.rs/cgmath"
homepage = "https://github.com/rustgd/cgmath"
repository = "https://github.com/rustgd/cgmath"
readme = "README.md"

keywords = ["gamedev", "math", "matrix", "vector", "quaternion"]

[lib]
name = "labyrinth_cgmath"

[features]
unstable = []
swizzle = []

[dependencies]
glium = "0.26.0-alpha6"
approx = "0.3.2"
mint = { version = "0.5.4", optional = true }
num-traits = "0.2.11"
rand = { version = "0.7.3", optional = true }
serde = { version = "1.0.104", features = ["serde_derive"], optional = true }
simd = { version = "0.2.4", optional = true }  # works only in rust toolchain up to 1.32

[dev-dependencies]
serde_json = "1.0"
