[package]
name = "labyrinth-engine"
version = "0.1.0"
authors = ["Pepijn Dragt <pepijn.dragt@gmail.com>"]
edition = "2018"

[dependencies]
glium = ">= 0.26.0-alpha3"
glutin = ">= 0.22.0-alpha3"
imgui = ">= 0.1.0"
imgui-glium-renderer = ">= 0.1.0"
imgui-winit-support = ">= 0.1.0"
image = "0.22.1"
toml = "0.5.3"
smallvec = "0.6.10"
labyrinth-obj = { path = "../labyrinth-obj" }
labyrinth-glyph = { path = "../labyrinth-glyph"} 
glyph_brush = "0.5.3"
lazy_static = "1.4.0"
glm = "0.2.3"
num-traits = "0.2.8"
json = "0.11.15"
