[package]
name = "labyrinth-engine"
version = "0.1.0"
authors = ["Pepijn Dragt <pepijn.dragt@gmail.com>"]
edition = "2018"

[dependencies]
labyrinth-glyph = { path = "../labyrinth-glyph"} 
labyrinth-cgmath = { path = "../labyrinth-cgmath"} 
labyrinth-assets = { path = "../labyrinth-assets"} 

glium = ">= 0.26.0-alpha3"
glutin = ">= 0.22.0-alpha3"
imgui = ">= 0.1.0"
imgui-glium-renderer = ">= 0.1.0"
imgui-winit-support = ">= 0.1.0"
image = "0.22.1"
toml = "0.5.3"
glyph_brush = "0.5.3"
num-traits = "0.2.8"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
generational-arena = "0.2.3"
downcast-rs = "1.1.0"
log = "0.4.8"
env_logger = "0.7.1"
