[package]

name    = "labyrinth-obj"
version = "0.1.0"
authors = [
    "Clark Gaebel <cg.wowus.cg@gmail.com>",
]
keywords    = ["3d", "format", "wavefront", "obj", "piston"]
description = "A parser for the Wavefront .obj file format."
license     = "MIT"
readme      = "README.md"
repository  = "https://github.com/PistonDevelopers/wavefront_obj.git"
homepage    = "https://github.com/PistonDevelopers/wavefront_obj"
edition = "2018"

[dependencies]
lexical = "2.1.0"
